fixed z-index header, color modal-body & improve style footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@
     right: 0;
     bottom: 0;
     background-color: rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: 2;
 
     /* hide modal */
     display: none;
@@ -68,7 +68,7 @@
 
 .modal-body{
     padding: 0 16px;
-    padding-bottom: 50px;
+    padding-bottom: 20px;
     background-color: #fff;
 }
 
@@ -101,9 +101,11 @@
 }
 
 .modal-footer  {
-    position: absolute;
+    /* position: absolute;
     bottom: 10px;
-    right: 10px;
+    right: 10px; */
+    text-align: right;
+    margin: 12px 0;
 }
 
 /* end modal */
@@ -114,6 +116,7 @@
     left: 0;
     right: 0;
     background-color: #000;
+    z-index: 1;
 }
 
 
